--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,27 @@
     <string name="tax">Tax</string>
     <string name="value">Value</string>
     <string name="sum">Sum</string>
+    <string name="pref_enable_hot_water_label">Hot water</string>
+    <string name="pref_enable_hot_water_key">hot water</string>
+    <string name="pref_enable_hot_water_false">Not Enabled</string>
+    <string name="pref_enable_hot_water_true">Enabled</string>
+    <string name="pref_enable_hot_water_default">true</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_enable_cold_water_label">Cold water</string>
+    <string name="pref_enable_cold_water_key">cold water</string>
+    <string name="pref_enable_cold_water_false">Not Enabled</string>
+    <string name="pref_enable_cold_water_true">Enabled</string>
+    <string name="pref_enable_cold_water_default">true</string>
+    <string name="pref_enable_canalization_label">Canalization</string>
+    <string name="pref_enable_canalization_key">canalization</string>
+    <string name="pref_enable_canalization_false">Not Enabled</string>
+    <string name="pref_enable_canalization_true">Enabled</string>
+    <string name="pref_enable_canalization_default">true</string>
+    <string name="pref_enable_electricity_label">Electricity</string>
+    <string name="pref_enable_electricity_key">Electricity</string>
+    <string name="pref_enable_electricity_false">Not Enabled</string>
+    <string name="pref_enable_electricity_true">Enabled</string>
+    <string name="pref_enable_electricity_default">true</string>
+    <string name="pref_payment_types_title">Payment types</string>
+    <string name="pref_payment_types_key">payment types</string>
 </resources>
