Add setting date for new bills

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="pref_enable_electricity_default">true</string>
     <string name="pref_payment_types_title">Payment types</string>
     <string name="pref_payment_types_key">payment types</string>
+    <string name="initial_data">Initial data</string>
 </resources>
