--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
     <string name="pref_enable_internet_false">Not enabled</string>
     <string name="pref_enable_internet_true">Enabled</string>
     <string name="pref_enable_internet_default">true</string>
+    <string name="previous_value">Previous value</string>
+    <string name="present_value">Present value</string>
 </resources>
