--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="previous_value">Previous value</string>
     <string name="present_value">Present value</string>
     <string name="drain">Drain</string>
+    <string name="internet">Internet</string>
 </resources>
